--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -48,7 +48,7 @@ producto.categoria=Category
 producto.descripcion=Description
 producto.detalle=Detail
 producto.existencias=Stock
-producto.imagen=image path
+producto.imagen=Image
 producto.listado=Product List
 producto.precio=Price
 producto.total=Total Products
